media/style.css
@font-face {
  font-family: "Omori-Font";
  src: url('./fonts/OMORI_GAME2.ttf');
}

html {
  box-sizing: border-box;
  height: 100%;
}
*, *::before, *::after {
  box-sizing: inherit;
}

:root {
  --white: #ffffff;
  --dark: #000000;
}

body {
  font-family: "Omori-Font", sans-serif;
  font-size: 1.5rem;
  margin: 0;
  min-height: 100dvh;
  overflow: hidden;
  display: flex;
  flex-direction: column;
  user-select: none;
  color: var(--dark);
  background-color: var(--white);
}

body[data-theme='dark'] {
  --white: #000000;
  --dark: #ffffff;
}

/* HEADER */
.header {
  position: fixed;
  top: 0;
  width: 100%;
  padding: 0.5rem 1rem;
  background-color: rgba(255, 255, 255, 0.15);
  border: 2px solid rgba(255, 255, 255, 0.05);
  border-radius: 0 0 10px 10px;
  display: flex;
  justify-content: space-between;
  align-items: center;
}

.menu-button {
  background: none;
  border: 2px solid rgba(255, 255, 255, 0.5);
  border-radius: 10px;
  padding: 0.25rem 0.5rem;
  font-size: 1.8rem;
  cursor: pointer;
}

/* LIGHT BULB SECTION */
.light-bulb {
  position: absolute;
  top: 0px;
  right: 40px;
  display: flex;
  flex-direction: column;
  align-items: center;
  z-index: 10;
}

#theme-toggle {
  background: none;
  border: none;
  cursor: pointer;
}

#bulb {
  filter: invert();
  height: 22vmin;
  min-height: 100px;
  width: auto;
  transition: all 0.3s ease;
}

#bulb-text {
  margin-top: 10px;
  font-size: 6vmin;
  color: var(--dark);
  transition: all 0.3s ease;
}

/* MAIN LAYOUT */
main.whitespace {
  box-sizing: border-box;
  width: 100%;
  flex-grow: 1; 
  padding-bottom: 3vh; 
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: flex-end;
  position: relative;
  background-color: var(--white);
  transition: background-color 0.1s ease;
  gap: 3vh;
}

/* CARPET */
.carpet {
  box-sizing: border-box;
  margin-bottom: 0;
  border: 4px solid var(--dark);
  width: 90%;
  box-shadow: 0px 0px 5px 1px var(--dark);
  max-width: 600px;
  aspect-ratio: 4 / 3;
  min-width: 200px;
  min-height: 100px;
  display: flex;
  position: relative;
  transition: all 0.3s ease;
}

/* DOOR */
.door img {
  filter: invert(); 
  height: 20vmin;
  min-height: 150px;
  cursor: pointer;
  margin-bottom: 0;
  transition: all 0.1s ease;
}

/* MEWO */
.mewo img {
  position: absolute;
  bottom: 0;
  height: 11vmin;
  min-height: 40px;
  transition: all 0.1s ease;
}

/* LAPTOP */
.laptop img {
  position: absolute;
  height: 14vmin;
  min-height: 50px;
  transition: all 0.1s ease;
}

/* SKETCHBOOK */
.scketchbook img {
  position: absolute;
  height: 13vmin;
  min-height: 40px;
  transition: all 0.1s ease;
}

/* TISSUE BOX */
.tissue-box img {
  position: absolute;
  height: 11vmin;
  min-height: 40px;
  transition: all 0.1s ease;
}


/* MEDIA QUERIES */
@media (max-width: 600px) {
  .light-bulb {
    position: absolute;
    top: 0;
    left: 50%;
    right: auto;
    transform: translateX(-50%);
    align-items: center;
  }

  #bulb {
    height: 30vmin;
    position: static;
    transform: none;
    display: block;
    margin: 0 auto;
  }

  #bulb-text {
    font-size: 9vmin;
    position: static;
    margin-top: 10px;
    text-align: center;
    width: 100%;
  }

  .mewo img {
    height: 15vmin;
  }
}

